// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`アクション情報 シート > 標準構成の出力が変化しない 1`] = `
{
  "blocks": [
    {
      "columns": [
        {
          "group": "アクション",
          "header": "アクション名",
        },
        {
          "group": "アクション",
          "header": "アクションID",
        },
        {
          "group": "アクション",
          "header": "No.",
        },
        {
          "group": "コピー先",
          "header": "アプリID",
        },
        {
          "group": "コピー先",
          "header": "アプリコード",
        },
        {
          "group": "フィールドの関連付け",
          "header": "種別",
        },
        {
          "group": "フィールドの関連付け",
          "header": "コピー元フィールド",
        },
        {
          "group": "フィールドの関連付け",
          "header": "コピー先フィールド",
        },
        {
          "group": "実行できる条件",
          "header": "利用者コード",
        },
        {
          "group": "実行できる条件",
          "header": "利用者の種類",
        },
        {
          "group": "実行できる条件",
          "header": "実行条件",
        },
      ],
      "rows": [
        [
          "請求書作成",
          "1001",
          "0",
          "400",
          "INVOICE",
          "FIELD",
          "案件名",
          "案件名",
          "sales",
          "GROUP",
          "ステータス種別 in ("完了")",
        ],
        [
          "請求書作成",
          "1001",
          "0",
          "400",
          "INVOICE",
          "RECORD_URL",
          "",
          "参照元",
          "user1",
          "USER",
          "ステータス種別 in ("完了")",
        ],
      ],
    },
  ],
}
`;

exports[`アプリのアクセス権 シート > 標準構成の出力が変化しない 1`] = `
{
  "blocks": [
    {
      "columns": [
        {
          "group": "対象",
          "header": "コード",
        },
        {
          "group": "対象",
          "header": "種類",
        },
        {
          "group": "対象",
          "header": "下位組織にも適用",
        },
        {
          "group": "レコード",
          "header": "閲覧",
        },
        {
          "group": "レコード",
          "header": "追加",
        },
        {
          "group": "レコード",
          "header": "編集",
        },
        {
          "group": "レコード",
          "header": "削除",
        },
        {
          "group": "レコード",
          "header": "読込",
        },
        {
          "group": "レコード",
          "header": "書出",
        },
        {
          "group": "アプリ",
          "header": "管理",
        },
      ],
      "rows": [
        [
          "Administrators",
          "GROUP",
          "□",
          "■",
          "■",
          "■",
          "■",
          "■",
          "■",
          "■",
        ],
        [
          "everyone",
          "GROUP",
          "■",
          "■",
          "■",
          "■",
          "□",
          "□",
          "□",
          "□",
        ],
      ],
    },
  ],
}
`;

exports[`フィールド シート > 標準構成の出力が変化しない 1`] = `
{
  "blocks": [
    {
      "columns": [
        {
          "group": "基本",
          "header": "No.",
        },
        {
          "group": "基本",
          "header": "フィールドコード",
        },
        {
          "group": "基本",
          "header": "フィールド名",
        },
        {
          "group": "基本",
          "header": "タイプ",
        },
        {
          "group": "基本",
          "header": "テーブル",
        },
        {
          "group": "基本",
          "header": "グループ",
        },
        {
          "group": "入力制約",
          "header": "必須",
        },
        {
          "group": "入力制約",
          "header": "重複禁止",
        },
        {
          "group": "入力制約",
          "header": "最大長",
        },
        {
          "group": "入力制約",
          "header": "最小長",
        },
        {
          "group": "入力制約",
          "header": "最大値",
        },
        {
          "group": "入力制約",
          "header": "最小値",
        },
        {
          "group": "初期値・選択肢",
          "header": "デフォルト値",
        },
        {
          "group": "初期値・選択肢",
          "header": "選択肢",
        },
        {
          "group": "初期値・選択肢",
          "header": "選択肢の並び",
        },
        {
          "group": "初期値・選択肢",
          "header": "対象ユーザー",
        },
        {
          "group": "計算・表示形式",
          "header": "計算式",
        },
        {
          "group": "計算・表示形式",
          "header": "計算式を表示",
        },
        {
          "group": "計算・表示形式",
          "header": "表示形式",
        },
        {
          "group": "計算・表示形式",
          "header": "小数桁",
        },
        {
          "group": "計算・表示形式",
          "header": "単位",
        },
        {
          "group": "計算・表示形式",
          "header": "単位の位置",
        },
        {
          "group": "計算・表示形式",
          "header": "桁区切り",
        },
        {
          "group": "表示",
          "header": "ラベル表示",
        },
        {
          "group": "表示",
          "header": "リンク種別",
        },
        {
          "group": "表示",
          "header": "サムネイルサイズ",
        },
        {
          "group": "表示",
          "header": "グループ初期表示",
        },
        {
          "group": "表示",
          "header": "機能の有効",
        },
      ],
      "rows": [
        [
          0,
          "案件名",
          "案件名",
          "SINGLE_LINE_TEXT",
          "",
          "",
          "必須",
          "禁止",
          "100",
          "1",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "■",
          "",
          "",
          "",
          "",
          "",
          "■",
          "",
          "",
          "",
          "",
        ],
        [
          1,
          "金額",
          "金額",
          "NUMBER",
          "",
          "",
          "任意",
          "許可",
          "",
          "",
          "1000000",
          "0",
          "0",
          "",
          "",
          "",
          "",
          "",
          "",
          "0",
          "円",
          "AFTER",
          "■",
          "■",
          "",
          "",
          "",
          "",
        ],
        [
          2,
          "税込金額",
          "税込金額",
          "CALC",
          "",
          "",
          "任意",
          "許可",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "金額 * 1.1",
          "■",
          "NUMBER",
          "0",
          "円",
          "AFTER",
          "",
          "■",
          "",
          "",
          "",
          "",
        ],
        [
          3,
          "ステータス種別",
          "ステータス種別",
          "RADIO_BUTTON",
          "",
          "",
          "必須",
          "許可",
          "",
          "",
          "",
          "",
          "進行中",
          "進行中,保留,完了",
          "HORIZONTAL",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "■",
          "",
          "",
          "",
          "",
        ],
        [
          4,
          "担当者",
          "担当者",
          "USER_SELECT",
          "",
          "",
          "任意",
          "許可",
          "",
          "",
          "",
          "",
          "user1",
          "",
          "",
          "sales,user1",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "■",
          "",
          "",
          "",
          "",
        ],
        [
          5,
          "顧客名",
          "顧客名",
          "SINGLE_LINE_TEXT",
          "",
          "",
          "任意",
          "許可",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "■",
          "",
          "",
          "",
          "",
        ],
        [
          6,
          "補足情報",
          "",
          "LABEL",
        ],
        [
          7,
          "spacer1",
          "",
          "SPACER",
        ],
        [
          8,
          "",
          "",
          "HR",
        ],
        [
          9,
          "関連案件",
          "関連案件",
          "REFERENCE_TABLE",
          "",
          "",
          "任意",
          "許可",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "■",
          "",
          "",
          "",
          "",
        ],
        [
          10,
          "備考",
          "備考",
          "MULTI_LINE_TEXT",
          "",
          "",
          "任意",
          "許可",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "□",
          "",
          "",
          "",
          "",
        ],
        [
          11,
          "社内情報",
          "",
          "GROUP",
          "",
          "社内情報",
        ],
        [
          12,
          "社内メモ",
          "社内メモ",
          "MULTI_LINE_TEXT",
          "",
          "社内情報",
          "任意",
          "許可",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "■",
          "",
          "",
          "",
          "",
        ],
        [
          13,
          "明細",
          "",
          "SUBTABLE",
          "明細",
          "",
        ],
        [
          14,
          "商品名",
          "商品名",
          "SINGLE_LINE_TEXT",
          "明細",
          "",
          "必須",
          "許可",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "■",
          "",
          "",
          "",
          "",
        ],
        [
          15,
          "数量",
          "数量",
          "NUMBER",
          "明細",
          "",
          "任意",
          "許可",
          "",
          "",
          "",
          "",
          "1",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "□",
          "■",
          "",
          "",
          "",
          "",
        ],
      ],
    },
  ],
}
`;

exports[`フィールドのアクセス権 シート > 標準構成の出力が変化しない 1`] = `
{
  "blocks": [
    {
      "columns": [
        {
          "group": "対象フィールド",
          "header": "フィールドコード",
        },
        {
          "group": "対象",
          "header": "コード",
        },
        {
          "group": "対象",
          "header": "種類",
        },
        {
          "group": "対象",
          "header": "下位組織にも適用",
        },
        {
          "group": "権限",
          "header": "閲覧",
        },
        {
          "group": "権限",
          "header": "編集",
        },
      ],
      "rows": [
        [
          "金額",
          "sales",
          "GROUP",
          "□",
          "■",
          "■",
        ],
        [
          "金額",
          "everyone",
          "GROUP",
          "■",
          "■",
          "□",
        ],
        [
          "金額",
          "temp",
          "GROUP",
          "□",
          "□",
          "□",
        ],
      ],
    },
  ],
}
`;

exports[`プロセス管理 シート > 標準構成の出力が変化しない 1`] = `
{
  "blocks": [
    {
      "columns": [
        {
          "group": "ステータス",
          "header": "No.",
        },
        {
          "group": "ステータス",
          "header": "ステータス名",
        },
        {
          "group": "作業者",
          "header": "指定方法",
        },
        {
          "group": "作業者",
          "header": "コード",
        },
        {
          "group": "作業者",
          "header": "種類",
        },
        {
          "group": "作業者",
          "header": "下位組織にも適用",
        },
      ],
      "rows": [
        [
          1,
          "未対応",
          "ONE",
          "sales",
          "GROUP",
          "■",
        ],
        [
          1,
          "未対応",
          "ONE",
          "user1",
          "USER",
          "□",
        ],
        [
          2,
          "完了",
          "ALL",
          "",
          "",
          "",
        ],
      ],
      "title": "ステータスと作業者",
    },
    {
      "columns": [
        {
          "group": "アクション",
          "header": "アクション名",
        },
        {
          "group": "ステータスの遷移",
          "header": "実行前",
        },
        {
          "group": "ステータスの遷移",
          "header": "実行後",
        },
        {
          "group": "実行できる条件",
          "header": "条件",
        },
      ],
      "rows": [
        [
          "対応する",
          "未対応",
          "完了",
          "金額 > "0"",
        ],
      ],
      "title": "アクション",
    },
  ],
}
`;

exports[`ルックアップ情報 シート > 標準構成の出力が変化しない 1`] = `
{
  "blocks": [
    {
      "columns": [
        {
          "group": "ルックアップ",
          "header": "フィールドコード",
        },
        {
          "group": "ルックアップ",
          "header": "コピー元アプリID",
        },
        {
          "group": "ルックアップ",
          "header": "コピー元アプリコード",
        },
        {
          "group": "ルックアップ",
          "header": "コピー元のフィールド",
        },
        {
          "group": "コピーする値",
          "header": "種別",
        },
        {
          "group": "コピーする値",
          "header": "コピー先フィールド",
        },
        {
          "group": "コピーする値",
          "header": "コピー元フィールド",
        },
        {
          "group": "取得条件",
          "header": "絞り込み",
        },
        {
          "group": "取得条件",
          "header": "ソート",
        },
      ],
      "rows": [
        [
          "顧客名",
          "200",
          "CUSTOMER",
          "顧客コード",
          "ほかのフィールドのコピー",
          "顧客住所",
          "住所",
          "状態 in ("有効")",
          "顧客コード asc",
        ],
        [
          "顧客名",
          "200",
          "CUSTOMER",
          "顧客コード",
          "ほかのフィールドのコピー",
          "顧客電話番号",
          "電話番号",
          "状態 in ("有効")",
          "顧客コード asc",
        ],
        [
          "顧客名",
          "200",
          "CUSTOMER",
          "顧客コード",
          "表示フィールド",
          "",
          "顧客コード",
          "状態 in ("有効")",
          "顧客コード asc",
        ],
        [
          "顧客名",
          "200",
          "CUSTOMER",
          "顧客コード",
          "表示フィールド",
          "",
          "顧客名",
          "状態 in ("有効")",
          "顧客コード asc",
        ],
      ],
    },
  ],
}
`;

exports[`レコードのアクセス権 シート > 標準構成の出力が変化しない 1`] = `
{
  "blocks": [
    {
      "columns": [
        {
          "group": "対象レコード",
          "header": "No.",
        },
        {
          "group": "対象レコード",
          "header": "絞り込み条件",
        },
        {
          "group": "対象",
          "header": "コード",
        },
        {
          "group": "対象",
          "header": "種類",
        },
        {
          "group": "対象",
          "header": "下位組織にも適用",
        },
        {
          "group": "権限",
          "header": "閲覧",
        },
        {
          "group": "権限",
          "header": "編集",
        },
        {
          "group": "権限",
          "header": "削除",
        },
      ],
      "rows": [
        [
          1,
          "ステータス種別 in ("完了")",
          "sales",
          "GROUP",
          "■",
          "■",
          "□",
          "□",
        ],
      ],
    },
  ],
}
`;

exports[`一般情報 シート > 標準構成の出力が変化しない 1`] = `
{
  "blocks": [
    {
      "columns": [
        {
          "header": "項目",
        },
        {
          "header": "値",
        },
      ],
      "rows": [
        [
          "ドメイン",
          "example.cybozu.com",
        ],
        [
          "アプリ名",
          "サンプル案件管理",
        ],
        [
          "アプリID",
          "123",
        ],
        [
          "アプリの説明",
          "案件の進捗を管理するアプリ",
        ],
      ],
    },
  ],
}
`;

exports[`一覧 シート > 標準構成の出力が変化しない 1`] = `
{
  "blocks": [
    {
      "columns": [
        {
          "group": "一覧",
          "header": "一覧名",
        },
        {
          "group": "一覧",
          "header": "一覧ID",
        },
        {
          "group": "一覧",
          "header": "No.",
        },
        {
          "group": "一覧",
          "header": "タイプ",
        },
        {
          "group": "表示するフィールド",
          "header": "フィールド",
        },
        {
          "group": "絞り込みとソート",
          "header": "絞り込み",
        },
        {
          "group": "絞り込みとソート",
          "header": "ソート",
        },
      ],
      "rows": [
        [
          "一覧",
          "10",
          "0",
          "LIST",
          "案件名",
          "ステータス種別 not in ("保留")",
          "レコード番号 desc",
        ],
        [
          "一覧",
          "10",
          "0",
          "LIST",
          "金額",
          "ステータス種別 not in ("保留")",
          "レコード番号 desc",
        ],
        [
          "一覧",
          "10",
          "0",
          "LIST",
          "ステータス種別",
          "ステータス種別 not in ("保留")",
          "レコード番号 desc",
        ],
        [
          "カレンダー",
          "20",
          "1",
          "CALENDAR",
          "",
          "",
          "レコード番号 desc",
        ],
      ],
    },
  ],
}
`;

exports[`関連レコード情報 シート > 標準構成の出力が変化しない 1`] = `
{
  "blocks": [
    {
      "columns": [
        {
          "group": "関連レコード",
          "header": "フィールドコード",
        },
        {
          "group": "関連レコード",
          "header": "参照先アプリID",
        },
        {
          "group": "関連レコード",
          "header": "参照先アプリコード",
        },
        {
          "group": "表示するレコードの条件",
          "header": "フィールド",
        },
        {
          "group": "表示するレコードの条件",
          "header": "参照先のフィールド",
        },
        {
          "group": "表示するフィールド",
          "header": "フィールド",
        },
        {
          "group": "絞り込みとソート",
          "header": "絞り込み",
        },
        {
          "group": "絞り込みとソート",
          "header": "ソート",
        },
      ],
      "rows": [
        [
          "関連案件",
          "300",
          "DEAL",
          "顧客名",
          "顧客名",
          "案件名",
          "状態 not in ("削除")",
          "レコード番号 desc",
        ],
        [
          "関連案件",
          "300",
          "DEAL",
          "顧客名",
          "顧客名",
          "金額",
          "状態 not in ("削除")",
          "レコード番号 desc",
        ],
      ],
    },
  ],
}
`;
